--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,8 +8,8 @@ $xl: 1200px;
 * {
     margin: 0;
     padding: 0;
-    font-family: "Exo";
     box-sizing: border-box;
+    font-family: "Montserrat";
 }
 
 html {
@@ -28,6 +28,16 @@ body {
     height: 100vh;
     position: relative;
 
+    &.loaded {
+        .home__portrait,
+        .home__title,
+        .home__subtitle,
+        .home__socials {
+            opacity: 1;
+        }
+    }
+
+
     .home__container {
         width: 100%;
         position: absolute;
@@ -45,6 +55,16 @@ body {
         max-width: 75vw;
         margin: 0 auto 10px;
         display: block;
+        user-drag: none; 
+        user-select: none;
+        -moz-user-select: none;
+        -webkit-user-drag: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+
+        opacity: 0;
+        transition: 1s opacity linear;
+
     }
 
     .home__title {
@@ -57,6 +77,11 @@ body {
         display: inline-block;
         position: relative;
         padding: 0 15px;
+        font-family: "Exo";
+        
+
+        opacity: 0;
+        transition: 1s opacity 0.4s linear;
 
         @media (min-width: $sm) {
             font-size: 2.2rem;
@@ -91,6 +116,11 @@ body {
         line-height: 1.25rem;
         letter-spacing: 1px;
         color: #333;
+
+        opacity: 0;
+        transition: 1s opacity 0.4s linear;
+
+
         @media (min-width: $sm) {
             font-size: 1.15rem;
         }
@@ -98,6 +128,10 @@ body {
 
     .home__socials {
         margin: 20px 0 0;
+
+        opacity: 0;
+        transition: 1s opacity 0.6s linear;
+
     }
 
     .home__link {
@@ -105,16 +139,24 @@ body {
         color: #999;
         display: inline-block;
         font-size: 1.4rem;
-        margin: 0 5px;
+        margin: 0 10px;
         cursor: pointer;
 
         @media (min-width: $sm) {
             font-size: 1.75rem;
-            margin: 0 10px;   
         }
 
         &:hover {
             color: #ccc;
+        }
+    }
+
+    .home__resumeBtn {
+        position: absolute;
+        bottom: 10px;
+
+        span{
+            display: inline-block;
         }
     }
 }
