--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,8 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Exo";
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: "Montserrat"; }
 
 html {
   font-size: 16px; }
@@ -15,6 +15,11 @@ body {
   width: 100vw;
   height: 100vh;
   position: relative; }
+  .home.loaded .home__portrait,
+  .home.loaded .home__title,
+  .home.loaded .home__subtitle,
+  .home.loaded .home__socials {
+    opacity: 1; }
   .home .home__container {
     width: 100%;
     position: absolute;
@@ -28,7 +33,15 @@ body {
     max-height: 40vh;
     max-width: 75vw;
     margin: 0 auto 10px;
-    display: block; }
+    display: block;
+    user-drag: none;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    opacity: 0;
+    transition: 1s opacity linear; }
   .home .home__title {
     text-transform: uppercase;
     color: #fff;
@@ -38,7 +51,10 @@ body {
     margin: 0;
     display: inline-block;
     position: relative;
-    padding: 0 15px; }
+    padding: 0 15px;
+    font-family: "Exo";
+    opacity: 0;
+    transition: 1s opacity 0.4s linear; }
     @media (min-width: 576px) {
       .home .home__title {
         font-size: 2.2rem;
@@ -62,22 +78,30 @@ body {
     font-size: 1rem;
     line-height: 1.25rem;
     letter-spacing: 1px;
-    color: #333; }
+    color: #333;
+    opacity: 0;
+    transition: 1s opacity 0.4s linear; }
     @media (min-width: 576px) {
       .home .home__subtitle {
         font-size: 1.15rem; } }
   .home .home__socials {
-    margin: 20px 0 0; }
+    margin: 20px 0 0;
+    opacity: 0;
+    transition: 1s opacity 0.6s linear; }
   .home .home__link {
     text-decoration: none;
     color: #999;
     display: inline-block;
     font-size: 1.4rem;
-    margin: 0 5px;
+    margin: 0 10px;
     cursor: pointer; }
     @media (min-width: 576px) {
       .home .home__link {
-        font-size: 1.75rem;
-        margin: 0 10px; } }
+        font-size: 1.75rem; } }
     .home .home__link:hover {
       color: #ccc; }
+  .home .home__resumeBtn {
+    position: absolute;
+    bottom: 10px; }
+    .home .home__resumeBtn span {
+      display: inline-block; }
