--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,9 +6,10 @@ $lg: 992px;
 $xl: 1200px;
 
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+
     font-family: "Montserrat";
 }
 
@@ -22,80 +23,83 @@ body {
 }
 
 .home {
-    text-align: center;
-    width: 100vw;
-    height: 100vh;
     position: relative;
 
-    &.loaded {
-        .home__portrait,
-        .home__title,
-        .home__subtitle,
-        .home__socials {
-            opacity: 1;
-        }
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+    
+    .-loaded &__portrait,
+    .-loaded &__title,
+    .-loaded &__subtitle,
+    .-loaded &__socials {
+        opacity: 1;
     }
 
-
-    .home__container {
+    &__container {
         width: 100%;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate3d(-50%, -50%, 0);
 
         @media (min-width: $sm) {
             width: auto;
         }
     }
 
-    .home__portrait {
+    &__portrait {
+        display: block;
         max-height: 40vh;
         max-width: 75vw;
         margin: 0 auto 10px;
-        display: block;
-        user-drag: none; 
+        
         user-select: none;
         -moz-user-select: none;
         -webkit-user-drag: none;
         -webkit-user-select: none;
         -ms-user-select: none;
-
+        
         opacity: 0;
         transition: 1s opacity linear;
-
     }
 
-    .home__title {
-        text-transform: uppercase;
-        color: #fff;
-        text-shadow: 0px 0px 14px rgba(150, 150, 150, 1);
-        font-size: 1.7rem;
-        letter-spacing: 2px;
-        margin:0;
-        display: inline-block;
+    &__title {
         position: relative;
-        padding: 0 15px;
-        font-family: "Exo";
         
+        display: inline-block;
+        margin:0;
+        padding: 0 15px;
+        
+        color: #fff;
+        
+        font-family: "Exo";
+        font-size: 1.7rem;
+        text-shadow: 0px 0px 14px rgba(150, 150, 150, 1);
+        letter-spacing: 2px;
+        text-transform: uppercase;
 
         opacity: 0;
         transition: 1s opacity 0.4s linear;
 
         @media (min-width: $sm) {
-            font-size: 2.2rem;
             padding: 0 20px;   
+            
+            font-size: 2.2rem;
         }
 
         &:before, &:after {
-            display: block;
-            content: "";
-            width: 30px;
-            height: 1px;
-            background: #999;
             position: absolute;
             top:50%;
-
+            
+            display: block;
+            width: 30px;
+            height: 1px;
+            
+            background-color: #999;
+            
+            content: "";
         }
 
         &:before {
@@ -107,55 +111,49 @@ body {
         }
     }
 
-    .home__subtitle {
+    &__subtitle {
+        margin:0;
+        
+        color: #333;
+        
         font-family: "Montserrat";
         font-weight: 300;
-        margin:0;
         font-size: 1rem;
         line-height: 1.25rem;
         letter-spacing: 1px;
-        color: #333;
-
+        
         opacity: 0;
         transition: 1s opacity 0.4s linear;
-
 
         @media (min-width: $sm) {
             font-size: 1.15rem;
         }
     }
 
-    .home__socials {
+    &__socials {
         margin: 20px 0 0;
 
         opacity: 0;
         transition: 1s opacity 0.6s linear;
-
     }
 
-    .home__link {
-        text-decoration: none;
-        color: #999;
+    &__link {
         display: inline-block;
-        font-size: 1.4rem;
         margin: 0 10px;
+        
+        color: #999;
+        
+        font-size: 1.4rem;
+        text-decoration: none;
+        
         cursor: pointer;
-
+        
         @media (min-width: $sm) {
             font-size: 1.75rem;
         }
 
         &:hover {
             color: #ccc;
-        }
-    }
-
-    .home__resumeBtn {
-        position: absolute;
-        bottom: 10px;
-
-        span{
-            display: inline-block;
         }
     }
 }
