--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -236,9 +236,14 @@ body[home] {
 
   .intro {
     background: url("https://www.toptal.com/designers/subtlepatterns/patterns/dark_wall.png");
+
     .profile {
       display: flex;
       padding: 60px 0;
+      @media screen and (max-width: 550px) {
+        flex-direction: column;
+        align-items: center;
+      }
       img {
         width: 200px;
         height: auto;
@@ -249,6 +254,7 @@ body[home] {
       .bio {
         margin-left: 30px;
         color: white;
+        font-size: 20px;
         .title {
           margin-bottom: 30px;
         }
@@ -302,16 +308,80 @@ body[home] {
     }
   }
 
-  .metiers {
-    min-height: 100vh;
-    padding: 75px 0;
+  .metiersDec {
     background: url("https://www.toptal.com/designers/subtlepatterns/patterns/squairy_light.png");
-    background-attachment: fixed;
     .header {
       background: url("../img/prm1001/poste.jpeg");
+    }
+  }
+
+  .etudiantDec {
+    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/geometry.png");
+    .container {
+      .figure {
+        background-position: -55px center;
+        background: url("https://images.unsplash.com/photo-1494809610410-160faaed4de0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=688&q=80");
+      }
+    }
+  }
+
+  .perspectiveMetierDec {
+    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/dot-grid.png");
+    .header {
+      background: url("https://images.unsplash.com/photo-1485988412941-77a35537dae4?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2696&q=80");
+    }
+  }
+
+  .metierDep {
+    color: white;
+    padding: 100px 0;
+    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/what-the-hex-dark.png");
+    .container {
+      display: flex;
+    }
+
+    .figure {
+      width: 300px;
+      order: 1;
+      flex-shrink: 0;
+      margin-left: 30px;
+      @media screen and (max-width: 550px) {
+        height: auto !important;
+      }
+
+      img {
+        width: 100%;
+        border-radius: 10px;
+        margin-bottom: 30px;
+      }
+    }
+  }
+
+  .etudiantDep {
+    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/stripes-light.png");
+    .header {
+      background: url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2371&q=80");
+    }
+  }
+
+  .perspectiveMetierDep {
+    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/ep_naturalwhite.png");
+
+    .figure {
+      background: url("https://images.unsplash.com/photo-1579389083395-4507e98b5e67?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=987&q=80");
+    }
+  }
+
+  .layout1 {
+    min-height: 100vh;
+    padding: 75px 0;
+    background-attachment: fixed;
+    font-size: 20px;
+    .header {
       height: 300px;
       background-size: cover;
       border-radius: 30px;
+      background-position: center center;
     }
 
     h3 {
@@ -328,23 +398,29 @@ body[home] {
     }
   }
 
-  .etudiant {
+  .layout2 {
     min-height: 100vh;
     padding: 75px 0;
-    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/geometry.png");
     background-attachment: fixed;
     .container {
       display: flex;
+      @media screen and (max-width: 550px) {
+        flex-direction: column;
+        align-items: center;
+      }
       .figure {
-        background: url("https://images.unsplash.com/photo-1494809610410-160faaed4de0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=688&q=80");
         width: 300px;
         height: 800px;
         border-radius: 10px;
         background-size: cover;
-        background-position: -55px center;
         transform: scaleX(-1);
         flex-shrink: 0;
         margin-right: 40px;
+        @media screen and (max-width: 550px) {
+          width: 100%;
+          height: 200px;
+          margin: 0 0 20px;
+        }
       }
       .content {
         h2 {
@@ -352,40 +428,8 @@ body[home] {
         }
         p {
           margin-bottom: 20px;
+          font-size: 20px;
         }
-      }
-    }
-  }
-
-  .metierDep {
-    height: 100vh;
-    background: #111;
-    color: white;
-    padding: 100px 0;
-    background: url("https://www.toptal.com/designers/subtlepatterns/patterns/what-the-hex-dark.png");
-    .container {
-      display: flex;
-    }
-
-    .figure {
-      width: 300px;
-      order: 1;
-      flex-shrink: 0;
-      margin-left: 30px;
-
-      img {
-        width: 100%;
-        border-radius: 10px;
-        margin-bottom: 30px;
-      }
-    }
-
-    .content {
-      h2 {
-        margin-bottom: 50px;
-      }
-      p {
-        margin-bottom: 20px;
       }
     }
   }
