adding pie chart

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -159,6 +159,10 @@ body[home] {
 }
 
 .main {
+  .bold {
+    font-weight: bold;
+  }
+
   .hero {
     background: url("https://i2.wp.com/isoflat.com/wp-content/uploads/2019/09/comp_13.gif?fit=800%2C600&ssl=1");
     background-attachment: fixed;
