--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -165,7 +165,7 @@ body[home] {
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
-        height: 100vh;
+        min-height: 100vh;
         &::before {
             width: 100%;
             height: 100%;
